--- a/condiments.html
+++ b/condiments.html
@@ -78,7 +78,7 @@
                   </svg>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
-                a class="dropdown-item" href="/bars">Bars</a>
+                <a class="dropdown-item" href="/bars">Bars</a>
                 <a class="dropdown-item" href="/breads">Breads & Muffins</a>
                 <a class="dropdown-item" href="/breakfast">Breakfast</a>
                 <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
@@ -107,13 +107,37 @@
       </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0"><a href="/sandiegobakeries" style="color: #FF6330">San Diego</a></h5>
-      <h5 class="py-3 mb-0"><a href="/vegasbakeries" style="color: #FF6330">Las Vegas</a></h5>
-      <h5 class="py-3 mb-0"><a href="/newyorkbakeries" style="color: #FF6330">New York</a></h5>
-      <h5 class="py-3 mb-0"><a href="/comingsoon" style="color: #FF6330">Scottsdale</a></h5>
-      <!--<h5 class="py-3 mb-0"><a href="/comingsoon" style="color: #FF6330">Los Angeles</a></h5>-->
+      <h5 class="py-3 mb-0">Condiments</h5>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/fineherbdressing" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/fineherbdressing.jpg" class="w-100" alt="Fine Herb Dressing">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/fineherbdressing" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fine Herb Dressing</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/rosemarygarlicdressing" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/rosemarygarlicdressing.jpg" class="w-100" alt="Rosemary Garlic Dressing">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/rosemarygarlicdressing" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Rosemary Garlic Dressing</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+    </div>
     </section>
   </div>
+
+  <footer class="tstbite-footer pt-3 pt-md-5 mt-5 bg-lightest-gray">
+    <div class="container">
+    </div>
+  </footer>
 </section>
 
 <!-- Tastebite Scripts -->
