--- a/kimchifriedrice.html
+++ b/kimchifriedrice.html
@@ -78,10 +78,11 @@
                   </svg>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="Pages">
-                  <a class="dropdown-item" href="/bars">Bars</a>
+                  a class="dropdown-item" href="/bars">Bars</a>
                 <a class="dropdown-item" href="/breads">Breads & Muffins</a>
                 <a class="dropdown-item" href="/breakfast">Breakfast</a>
                 <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
+                <a class="dropdown-item" href="/condiments">Condiments</a>
                 <a class="dropdown-item" href="/cookies">Cookies</a>
                 <a class="dropdown-item" href="/entrees">Entrees</a>
                 </div>
