--- a/index.html
+++ b/index.html
@@ -108,10 +108,11 @@
               <div class="dropdown-menu" aria-labelledby="Pages">
                 <a class="dropdown-item" href="/bars">Bars</a>
                 <a class="dropdown-item" href="/breads">Breads & Muffins</a>
+                <a class="dropdown-item" href="/breakfast">Breakfast</a>
                 <a class="dropdown-item" href="/cakesandpies">Cakes & Pies</a>
+                <a class="dropdown-item" href="/condiments">Condiments</a>
                 <a class="dropdown-item" href="/cookies">Cookies</a>
                 <a class="dropdown-item" href="/entrees">Entrees</a>
-                <a class="dropdown-item" href="/breakfast">Breakfast</a>
               </div>
             </li>
             <li class="nav-item">
