--- a/breakfast.html
+++ b/breakfast.html
@@ -85,6 +85,7 @@
                 <a class="dropdown-item" href="/condiments">Condiments</a>
                 <a class="dropdown-item" href="/cookies">Cookies</a>
                 <a class="dropdown-item" href="/entrees">Entrees</a>
+                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -136,28 +137,6 @@
             </a>
             <figcaption class="mt-2">
               <a href="/maplevanillagranola" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Maple Vanilla Granola</a>
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/fudgefrosting" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/fudgefrosting.jpg" class="w-100" alt="Fudge Frosting">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/fudgefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fudge Frosting</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/creamcheesefrosting" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/creamcheesefrosting.jpg" class="w-100" alt="Cream Cheese Frosting">
-            </a>
-            <figcaption class="mt-2">
-              <a href="/creamcheesefrosting" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Cheese Frosting</a>
             </figcaption>
           </figure>
         </div>
