--- a/rosemarygarlicdressing.html
+++ b/rosemarygarlicdressing.html
@@ -85,6 +85,7 @@
                 <a class="dropdown-item" href="/condiments">Condiments</a>
                 <a class="dropdown-item" href="/cookies">Cookies</a>
                 <a class="dropdown-item" href="/entrees">Entrees</a>
+                <a class="dropdown-item" href="/other">Other</a>
                 </div>
               </li>
               <li class="nav-item">
