--- a/cookies.html
+++ b/cookies.html
@@ -123,7 +123,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/puddingchocolatechipcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/puddingchocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
+              <img src="assets/images/food/puddingchocolatechipcookies.jpg" class="w-100" alt="Pudding Chocolate Chip Cookies">
             </a>
             <figcaption class="mt-2">
               <a href="/puddingchocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
@@ -164,11 +164,11 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <a href="/gfchocolatechipcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="GF Chocolate Chip Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookies</a>
+              <a href="/gfchocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF Chocolate Chip Cookies</a>
             </figcaption>
           </figure>
         </div>
@@ -206,6 +206,16 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/newchocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/hazelnuttruffles" class="tstbite-animation rounded-6">
