--- a/gfchocolatechipcookies.html
+++ b/gfchocolatechipcookies.html
@@ -121,24 +121,25 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Chocolate Chip Cookies</h5>
+          <h5 class="py-3 mb-0 h2">GF Chocolate Chip Cookies</h5>
+          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:35px; height:35px"><img src="assets/images/icons/df.png" style="width:35px; height:35px"><img src="assets/images/icons/v.png" style="width:35px; height:35px"><img src="assets/images/icons/ef.png" style="width:35px; height:35px"></div>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Joy Food Sunshine</small>
+          <small class="ps-1">Author: Wife Mama Foodie</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>October 6th, 2024</small>
+          <small>December 17th, 2023</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/newchocolatechipcookies.jpg" class="w-100" >
+          <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -146,19 +147,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>30 minutes</span>
+                <span>20 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>11 minutes</span>
+                <span>10 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>41 minutes</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>12 cookies
+                <span>6-7 large cookies or 9-10 small cookies
                 </span>
               </li>
             </ul>
@@ -169,27 +170,11 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="butter">1/2 cup salted butter, softened</label>
+                  <label class="form-check-label" for="flour">2 cups finely ground almond flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="granulatedsugar">1/2 cup granulated sugar</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="brownsugar">1/2 cup light brown sugar, packed</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="vanilla">1 teaspoon vanilla extract</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="egg">1 large egg</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">1 1/2 cups flour (spooned & leveled)</label>
+                  <label class="form-check-label" for="arrowroot">2 tablespoons arrowroot starch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -197,15 +182,31 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="bakingpowder">1/4 teaspoon baking powder</label>
+                  <label class="form-check-label" for="salt">1/4 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="salt">1/2 teaspoon salt</label>
+                  <label class="form-check-label" for="maplesyrup">1/8 cup maple syrup</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flakysalt">1 cup chocolate, chopped (14 oz) - I used 4 Blue Stripes Dark Chocolate Bars</label>
+                  <label class="form-check-label" for="water">3 tablespoons water</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="coconutoil">2 tablespoons melted coconut oil</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="vanilla">1 teaspoon vanilla extract</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="chocolate">1/2 cup chocolate chips or chopped chocolate, use more or less to taste</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="flakysalt">Sea salt flakes, for sprinkling</label>
                 </div>
               </div>
             </div>
@@ -220,40 +221,23 @@
                 </li>
                 <li>
                   <span>2</span>
-                  In a medium bowl, mix together dry ingredients: flour, baking soda, baking powder, and salt. Set aside.
+                  In a medium bowl, mix together dry ingredients: flour, arrowroot, baking soda, and salt. 
                 </li>
                 <li>
                   <span>3</span>
-                  Using a KitchenAid mixer, cream together butter and sugars until combined.  
+                  Add maple syrup, water, coconut oil, and vanilla, mixing just until combined. Stir in chocolate.
                 </li>
                 <li>
                   <span>4</span>
-                  Beat in eggs and vanilla until light (about 1 minute).
+                  To make large cookies, roll out 2-3 tablespoon-sized balls of dough. To make small cookies, roll out 1 tablespoon-sized balls of dough.
                 </li>
                 <li>
                   <span>5</span>
-                  Mix in the dry ingredients until combined.
+                  Gently flatten the balls of dough. Bake for 8-10 minutes, until lightly brown. Don't overbake.
                 </li>
                 <li>
                   <span>6</span>
-                  Add chocolate and mix well.
-                </li>
-                <li>
-                  <span>7</span>
-                  Put the bowl in the fridge for about 10 minutes for the dough to chill slightly.
-                </li>
-                <li>
-                  <span>8</span>
-                  Take the bowl of the fridge. Using a cookie scoop, place the dough evenly spaced on the prepared cookie sheet. Roll out each ball.
-                </li>
-                <li>
-                  <span>9</span>
-                  Bake in preheated oven for approximately 11 minutes. Don't overbake - they may be lightly browned in a few places, which is exactly how you want them.
-                  They will set up as they sit on the cookie sheet for a few minutes.
-                </li>
-                <li>
-                  <span>10</span>
-                  Let them sit on the baking pan for 5 minutes before removing to cooling rack. Store in an airtight container at room temperature for up to 5 days, or in the freezer for up to 2 months. 
+                  Remove and let cool on the pan thoroughly to keep them from falling apart easily. Sprinkle with a bit of sea salt flakes, if desired.
                 </li>
               </ul>
             </div>
@@ -265,17 +249,17 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies1.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies2.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <img src="assets/images/food/chocolatechipcookies2.jpg" class="w-100" alt="Chocolate Chip Cookies">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies3.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <img src="assets/images/food/chocolatechipcookies3.jpg" class="w-100" alt="Chocolate Chip Cookies">
           </figure>
         </div>
       </div>
