--- a/sweet.html
+++ b/sweet.html
@@ -240,11 +240,11 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
+            <a href="/gfchocolatechipcookies" class="tstbite-animation rounded-6">
               <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookies</a>
+              <a href="/gfchocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookies</a>
             </figcaption>
           </figure>
         </div>
@@ -415,6 +415,16 @@
             </a>
             <figcaption class="mt-2">
               <a href="/bostoncreamcupcakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Boston Cream Cupcakes</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/chocolatechipcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/newchocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookies</a>
             </figcaption>
           </figure>
         </div>
