--- a/chocolatechipcookies.html
+++ b/chocolatechipcookies.html
@@ -216,43 +216,47 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 375°F and line a baking sheet with parchment paper. Set aside.
+                  Take out butter and leave it on the counter to soften before starting anything else.
                 </li>
                 <li>
                   <span>2</span>
-                  In a medium bowl, mix together dry ingredients: flour, baking soda, baking powder, and salt. Set aside.
+                  Preheat oven to 375°F and line a baking sheet with parchment paper. Set aside.
                 </li>
                 <li>
                   <span>3</span>
-                  Using a KitchenAid mixer, cream together butter and sugars until combined.  
+                  In a medium bowl, mix together dry ingredients: flour, baking soda, baking powder, and salt. Set aside.
                 </li>
                 <li>
                   <span>4</span>
-                  Beat in eggs and vanilla until light (about 1 minute).
+                  Using a KitchenAid mixer, cream together butter and sugars until combined.  
                 </li>
                 <li>
                   <span>5</span>
-                  Mix in the dry ingredients until combined.
+                  Beat in eggs and vanilla until light (about 1 minute).
                 </li>
                 <li>
                   <span>6</span>
-                  Add chocolate and mix well.
+                  Mix in the dry ingredients, little by little, until combined. (Don't pour all dry ingredients in at once, mix half first, then the other half)
                 </li>
                 <li>
                   <span>7</span>
-                  Put the bowl in the fridge for about 10 minutes for the dough to chill slightly.
+                  Add chocolate and mix well.
                 </li>
                 <li>
                   <span>8</span>
-                  Take the bowl of the fridge. Using a cookie scoop, place the dough evenly spaced on the prepared cookie sheet. Roll out each ball.
+                  Put the bowl in the fridge for about 10 minutes for the dough to chill slightly.
                 </li>
                 <li>
                   <span>9</span>
+                  Take the bowl of the fridge. Using a cookie scoop, place the dough evenly spaced on the prepared cookie sheet. Roll out each ball.
+                </li>
+                <li>
+                  <span>10</span>
                   Bake in preheated oven for approximately 11 minutes. Don't overbake - they may be lightly browned in a few places, which is exactly how you want them.
                   They will set up as they sit on the cookie sheet for a few minutes.
                 </li>
                 <li>
-                  <span>10</span>
+                  <span>11</span>
                   Let them sit on the baking pan for 5 minutes before removing to cooling rack. Store in an airtight container at room temperature for up to 5 days, or in the freezer for up to 2 months. 
                 </li>
               </ul>
