--- a/chocolatechipcookiecake.html
+++ b/chocolatechipcookiecake.html
@@ -170,7 +170,7 @@
                 <strong>Cookie Cake</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">3/4 cup (170g) unsalted butter, softened to room temperature</label>
+                  <label class="form-check-label" for="crackers">3/4 cup (170g) unsalted butter, softened to room temperature (I use Président)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
