--- a/cookies.html
+++ b/cookies.html
@@ -176,11 +176,11 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/mnmcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/mandmcookies.jpg" class="w-100" alt="Mini M&M Chocolate Chip Cookies">
+            <a href="/mnmpuddingcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/mandmcookies.jpg" class="w-100" alt="Mini M&M Pudding Chocolate Chip Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Chocolate Chip Cookies</a>
+              <a href="/mnmpuddingcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Pudding Chocolate Chip Cookies</a>
             </figcaption>
           </figure>
         </div>
@@ -213,6 +213,16 @@
             </a>
             <figcaption class="mt-2">
               <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/mnmcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/mnmcookies.jpg" class="w-100" alt="M&M Chocolate Chip Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Chocolate Chip Cookies</a>
             </figcaption>
           </figure>
         </div>
