--- a/mnmcookies.html
+++ b/mnmcookies.html
@@ -126,19 +126,19 @@
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: The Baking ChocolaTess</small>
+          <small class="ps-1">Author: Joy Food Sunshine</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>January 23rd, 2023</small>
+          <small>October 8th, 2024</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/mandmcookies.jpg" class="w-100" >
+          <img src="assets/images/food/mnmcookies.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -146,19 +146,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>15 minutes</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>12 minutes</span>
+                <span>11 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>27 minutes</span>
+                <span>41 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>18 cookies
+                <span>12 cookies
                 </span>
               </li>
             </ul>
@@ -169,15 +169,15 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/2 cup butter, softened</label>
+                  <label class="form-check-label" for="crackers">1/2 cup salted butter, softened to room temperature (I use Président)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 cup granulated sugar</label>
+                  <label class="form-check-label" for="unsalted">3/4 cup granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 cup packed brown sugar</label>
+                  <label class="form-check-label" for="unsalted">1/4 cup light brown sugar, packed</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -185,15 +185,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon pure vanilla extract</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon pure vanilla extract</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 1/3 cups flour (spooned & leveled)</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 cup vanilla instant pudding mix</label>
+                  <label class="form-check-label" for="unsalted">1 1/2 cups flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -201,15 +197,19 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/4 teaspoon baking powder</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 1/4 cups mini chocolate chips</label>
+                  <label class="form-check-label" for="unsalted">1/4 cups mini chocolate chips (I use 1 finely chopped & shredded Blue Stripes dark chocolate bar)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 1/4 cups Mini M&M's (substitute chopped Unreal milk chocolate gems)</label>
+                  <label class="form-check-label" for="unsalted">3/4 cups Mini M&M's</label>
                 </div>
               </div>
             </div>
@@ -220,39 +220,71 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F and line a large baking sheet with parchment paper. Set aside.
+                  Take out butter and leave it on the counter to soften before starting anything else.
                 </li>
                 <li>
                   <span>2</span>
-                  Using a mixer, in a large mixing bowl, cream together the butter and sugars well.
+                  Preheat oven to 375°F and line a large baking sheet with parchment paper. Set aside.
                 </li>
                 <li>
                   <span>3</span>
-                  Add egg and vanilla extract and mix until well combined.
+                  In a small bowl, mix together flour, baking soda, baking powder, and salt. Set aside.
                 </li>
                 <li>
                   <span>4</span>
-                  Add in the flour, instant pudding mix, baking soda, and salt, and mix until just combined on low speed (don't overmix). Remove the mixer/beaters from the bowl.
+                  In the bowl of a standing mixer or in a large bowl with a handheld mixer, cream together butter, light brown sugar and granulated sugar.
                 </li>
                 <li>
                   <span>5</span>
-                  Add mini chocolate chips and mini M&M's and stir with a wooden spoon.
+                  Add egg and vanilla to the butter/sugar mixture and beat until combined.
                 </li>
                 <li>
                   <span>6</span>
-                  Using a medium or large cookie scoop, scoop and place dough scoops on baking sheet, 1 inch for medium cookies and 2 inches for large cookies.
+                  Add dry ingredients and beat until combined.
                 </li>
                 <li>
                   <span>7</span>
-                  Bake for 10-12 minutes for medium cookies and 12-14 for large cookies.
+                  Add mini M&M's and chocolate chips and mix until evenly distributed.
                 </li>
                 <li>
                   <span>8</span>
-                  Let cookies cool on cookie sheet for 10 minutes before transferring to cooling rack.
+                  Put the bowl in the fridge for about 10 minutes for the dough to chill slightly.
+                </li>
+                <li>
+                  <span>9</span>
+                  Take the bowl of the fridge. Using a cookie scoop, place the dough evenly spaced on the prepared cookie sheet. Roll out each ball.
+                </li>
+                <li>
+                  <span>10</span>
+                  Bake in preheated oven for approximately 11-13 minutes. Don't overbake - they may be lightly browned in a few places, which is exactly how you want them.
+                  They will set up as they sit on the cookie sheet for a few minutes.
+                </li>
+                <li>
+                  <span>11</span>
+                  Let them sit on the baking pan for 5 minutes before removing to cooling rack. Store in an airtight container at room temperature for up to 5 days, or in the freezer for up to 2 months. 
                 </li>
               </ul>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="tstbite-components my-4 my-md-5">
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <img src="assets/images/food/mnmcookies1.jpg" class="w-100" alt="Chocolate Chip Cookies">
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <img src="assets/images/food/mnmcookies2.jpg" class="w-100" alt="Chocolate Chip Cookies">
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <img src="assets/images/food/mnmcookies3.jpg" class="w-100" alt="Chocolate Chip Cookies">
+          </figure>
         </div>
       </div>
     </section>
