--- a/mnmpuddingcookies.html
+++ b/mnmpuddingcookies.html
@@ -121,24 +121,24 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Chocolate Chip Cookies</h5>
+          <h5 class="py-3 mb-0 h2">Mini M&M Pudding Chocolate Chip Cookies</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Joy Food Sunshine</small>
+          <small class="ps-1">Author: The Baking ChocolaTess</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>October 6th, 2024</small>
+          <small>January 23rd, 2023</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/newchocolatechipcookies.jpg" class="w-100" >
+          <img src="assets/images/food/mandmcookies.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -146,19 +146,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>30 minutes</span>
+                <span>15 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>11 minutes</span>
+                <span>12 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>41 minutes</span>
+                <span>27 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>12 cookies
+                <span>18 cookies
                 </span>
               </li>
             </ul>
@@ -169,43 +169,47 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="butter">1/2 cup salted butter, softened to room temperature (I use Président)</label>
+                  <label class="form-check-label" for="crackers">1/2 cup butter, softened</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="granulatedsugar">1/2 cup granulated sugar</label>
+                  <label class="form-check-label" for="unsalted">1/2 cup granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="brownsugar">1/2 cup light brown sugar, packed</label>
+                  <label class="form-check-label" for="unsalted">1/2 cup packed brown sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="vanilla">1 teaspoon vanilla extract</label>
+                  <label class="form-check-label" for="crackers">1 large egg</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="egg">1 large egg</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon pure vanilla extract</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">1 1/2 cups flour (spooned & leveled)</label>
+                  <label class="form-check-label" for="unsalted">1 1/3 cups flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="bakingsoda">1/2 teaspoon baking soda</label>
+                  <label class="form-check-label" for="unsalted">1/4 cup vanilla instant pudding mix</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="bakingpowder">1/4 teaspoon baking powder</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon baking soda</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="salt">1/2 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flakysalt">1 cup chocolate, chopped (14 oz) - I used 4 Blue Stripes Dark Chocolate Bars</label>
+                  <label class="form-check-label" for="unsalted">1 1/4 cups mini chocolate chips</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 1/4 cups Mini M&M's (substitute chopped Unreal milk chocolate gems)</label>
                 </div>
               </div>
             </div>
@@ -216,71 +220,39 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Take out butter and leave it on the counter to soften before starting anything else.
+                  Preheat oven to 350°F and line a large baking sheet with parchment paper. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  Preheat oven to 375°F and line a baking sheet with parchment paper. Set aside.
+                  Using a mixer, in a large mixing bowl, cream together the butter and sugars well.
                 </li>
                 <li>
                   <span>3</span>
-                  In a medium bowl, mix together dry ingredients: flour, baking soda, baking powder, and salt. Set aside.
+                  Add egg and vanilla extract and mix until well combined.
                 </li>
                 <li>
                   <span>4</span>
-                  Using a KitchenAid mixer, cream together butter and sugars until combined.  
+                  Add in the flour, instant pudding mix, baking soda, and salt, and mix until just combined on low speed (don't overmix). Remove the mixer/beaters from the bowl.
                 </li>
                 <li>
                   <span>5</span>
-                  Beat in eggs and vanilla until light (about 1 minute).
+                  Add mini chocolate chips and mini M&M's and stir with a wooden spoon.
                 </li>
                 <li>
                   <span>6</span>
-                  Mix in the dry ingredients, little by little, until combined. (Don't pour all dry ingredients in at once, mix half first, then the other half)
+                  Using a medium or large cookie scoop, scoop and place dough scoops on baking sheet, 1 inch for medium cookies and 2 inches for large cookies.
                 </li>
                 <li>
                   <span>7</span>
-                  Add chocolate and mix well.
+                  Bake for 10-12 minutes for medium cookies and 12-14 for large cookies.
                 </li>
                 <li>
                   <span>8</span>
-                  Put the bowl in the fridge for about 10 minutes for the dough to chill slightly.
-                </li>
-                <li>
-                  <span>9</span>
-                  Take the bowl of the fridge. Using a cookie scoop, place the dough evenly spaced on the prepared cookie sheet. Roll out each ball.
-                </li>
-                <li>
-                  <span>10</span>
-                  Bake in preheated oven for approximately 11 minutes. Don't overbake - they may be lightly browned in a few places, which is exactly how you want them.
-                  They will set up as they sit on the cookie sheet for a few minutes.
-                </li>
-                <li>
-                  <span>11</span>
-                  Let them sit on the baking pan for 5 minutes before removing to cooling rack. Store in an airtight container at room temperature for up to 5 days, or in the freezer for up to 2 months. 
+                  Let cookies cool on cookie sheet for 10 minutes before transferring to cooling rack.
                 </li>
               </ul>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-    <section class="tstbite-components my-4 my-md-5">
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies1.jpg" class="w-100" alt="Chocolate Chip Cookies">
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies2.jpg" class="w-100" alt="Chocolate Chip Cookies">
-          </figure>
-        </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies3.jpg" class="w-100" alt="Chocolate Chip Cookies">
-          </figure>
         </div>
       </div>
     </section>
